# axosm

./: Cargo.toml  LICENSE  README.md  ai-context.md
back/: Cargo.toml  README.md  game.db  game.db-shm  game.db-wal
back/migrations/: 20251001_create_tables.sql  20251001_create_tables_postgres.sql  20251001_create_tables_sqlite.sql
back/src/: api.rs  app.rs  auth.rs  db.rs  dto.rs  error.rs  game.rs  handlers.rs  main.rs  main_old.rs  maths.rs  proc_gen.rs  repositories.rs
back/src/OLD.api/: TODO_refacto_api_state.json  dtos.rs
back/src/api/: dtos.rs  move_unit.rs  state.rs  units.rs
back/src/auth/: auth.rs  middleware.rs
back/src/db/: OLD.models.rs  building.rs  models.rs  player.rs  queries.rs  unit.rs  units.rs
back/src/domain/: event.rs  queue.rs
back/src/dto/: state.rs
back/src/game/: game_init.rs  proc_gen.rs  production.rs
back/src/game/proc_gen/: galaxy.rs  seed.rs  star_system.rs  universe.rs
back/src/handlers/: auth.rs  cosmic_density.rs  planet.rs  state.rs
back/src/maths/: spiral_3d.rs
back/src/proc_gen/: seed.rs  tile.rs
back/src/repositories/: building_repo.rs  buildings_repo.rs  galaxy_repo.rs  planet_repo.rs  player_state.rs  star_system.rs  star_systems_repo.rs  units_repo.rs
back/src/services/: planets.rs  state.rs
back/src/services/map/: spawn.rs
back/src/services/repository/: building_repo.rs
back/src/worker/: arrivals.rs  runner.rs
chat_gpt/: dump.txt  orm_vs_no_orm.md
front/: .prod.development  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
front/src/: App.tsx  main.ts
front/src/OLD/: App.tsx  main.ts.txt
front/src/OLD/api/: gameApi.ts
front/src/OLD/math/: goldberg.ts  vec3.ts
front/src/OLD/render/: unitMesh.ts.txt  webgpu.ts.txt
front/src/OLD/state/: gameStore.ts
front/src/OLD/three/: input.ts
front/src/OLD/types/: game.ts
front/src/OLD/ui/: UnitPopup.tsx
front/src/OLD/world/: units.ts.txt
front/src/api/: api.ts  gameApi.ts  gameState.ts  identity.ts
front/src/lib/: ThreeScene.svelte
front/src/math/: goldberg.ts
front/src/render/: pipeline.ts  pipeline.ts.txt  unitMesh.ts  webgpu.ts
front/src/renderer/: GameRenderer.ts
front/src/routes/: +page.svelte
front/src/shader/: units.wgsl.txt
front/src/state/: gameStore.ts
front/src/three/: grid.ts  input.ts  renderer.ts
front/src/types/: game.ts
front/src/ui/: UnitPopup.tsx
front/src/world/: units.ts
frontend/: client.ts  deno.json  index.html
llm/: dump.txt
llm/city_battle_and_influence/: city_battle_influence_sqlite.sql  claude.md  sqlite.sql
llm/stellarum_imperium/: claude.md  game_design_document.md  stellarum_imperium_postgres.sql  stellarum_imperium_sqlite.sql  stellarum_imperium_sqlite_squads_vessels.sql  stellarum_imperium_sqlite_units.sql
rust-server/: Cargo.toml
rust-server/migrations/: 20251001_create_tables.sql
rust-server/src/: main.rs
src/: main.rs
