[package]
name = "axosm"
version = "0.1.0"
edition = "2024"

[features]
# By default, we use production features (postgres)
default = ["local_mode"]

# Toggle switches
production_mode = ["sqlx/postgres", "dep:jsonwebtoken"]
local_mode = ["sqlx/sqlite"]
# Maybe we will need the feature chrono : The sqlx crate with the chrono feature
# allows you to work with DateTime types in Rust when interacting with databases.

[dependencies]
axum = { version = "0.8.7", features = ["json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
uuid = { version = "1.4", features = ["v4", "serde"] }
futures-util = "0.3"
futures = "0.3"
async-stream = "0.3"

# used for seed using hash function
xxhash-rust = "=0.8.10"

# One single, clean SQLx definition
sqlx = { version = "0.7", features = ["runtime-tokio-rustls"] }

# Optional production-only dependencies
jsonwebtoken = { version = "9.3", optional = true }
# bcrypt = { version = "0.15", optional = true }
